fixed scrollbar

--- a/mympy-app/src/components/search_bar/Dreams.css
+++ b/mympy-app/src/components/search_bar/Dreams.css
@@ -16,6 +16,12 @@
   padding: 5px;
 }
 
+ @media(max-width:400px) {
+  .search-bar {
+    margin-left: 0px;
+  } 
+} 
+
 input[type="text"]
 {
     font-size:20px;
@@ -34,6 +40,12 @@ input[type="text"]
   font-size: 29px;
   border-radius: 20px;
   padding: 0 20px;
+}
+
+@media(max-width:400px) {
+  .searchBox {
+    height: 30px;
+  }
 }
 
 #searchicon{
